unpackaged/main/default/objects/Test_Assignment_Event__c/Test_Assignment_Event__c.object-meta.xml
<CustomObject>
    <description>Audit trail for pool assignment: one row per claim, release, force-unassign, reassign, or auto-release, with the affected tester, the actor, and the reason. Written ONLY by UatExecutionService (system-mode DML) — no permission set grants create/edit/delete, so rows cannot be forged or tampered with through the API. CreatedDate is the event timestamp.</description>
    <label>Test Assignment Event</label>
    <nameField>
        <displayFormat>TAE-{00000}</displayFormat>
        <label>Test Assignment Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Assignment Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>