unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>What happened to the seat. Claimed/Released are tester actions; Force Unassigned/Reassigned are admin actions; Auto Released is the stale-claim job.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Force Unassigned</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Auto Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>