unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who performed the action. Same as Tester for self-service claim/release; the admin for Force Unassigned/Reassigned; the scheduled-job runner for Auto Released.</description>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UAT Assignment Events (Actor)</relationshipLabel>
    <relationshipName>UAT_Assignment_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>