unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why the seat was released/unassigned/reassigned, as entered by the tester or admin. Blank for plain claims; a fixed system sentence for Auto Released.</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>