unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Durable context: kept even if the execution row is later removed (pristine releases delete their execution). SetNull so audit rows never block a delete.</description>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Assignment Events</relationshipLabel>
    <relationshipName>Assignment_Events</relationshipName>
    <type>Lookup</type>
</CustomField>