unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The cycle the seat belonged to; blank for standalone assignments. SetNull so audit rows never block a delete.</description>
    <label>Test Cycle</label>
    <referenceTo>Test_Cycle__c</referenceTo>
    <relationshipLabel>Assignment Events</relationshipLabel>
    <relationshipName>Assignment_Events</relationshipName>
    <type>Lookup</type>
</CustomField>