unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The execution the event happened to. Can go null (pristine releases delete their execution row) — Test Case + Test Cycle keep the durable context.</description>
    <label>Test Execution</label>
    <referenceTo>Test_Execution__c</referenceTo>
    <relationshipLabel>Assignment Events</relationshipLabel>
    <relationshipName>Assignment_Events</relationshipName>
    <type>Lookup</type>
</CustomField>