unpackaged/main/default/objects/Test_Assignment_Event__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tester whose seat changed (the claimant on Claimed, the releasee on the other actions).</description>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UAT Assignment Events (Tester)</relationshipLabel>
    <relationshipName>UAT_Assignment_Events</relationshipName>
    <type>Lookup</type>
</CustomField>