unpackaged/main/default/objects/Test_Assignment_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Tester__c</columns>
    <columns>Actor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>